# hico-skills

./: .dockerignore  .gitignore  .sops.yaml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  env.yaml  pyproject.toml  secrets.enc.yaml  secrets.example.yaml
.github/workflows/: ci.yml  mirror.yml
agents/: LICENSE.md
agents/_TEMPLATE/: AGENT.md
agents/codebase-explorer/: AGENT.md
docs/: ARCHITECTURE.md  CONNECT.md
frontend/: app.js  index.html  styles.css
skills/: LICENSE.md  _TEMPLATE.md  codebase-explorer.md  commit-message-writer.md  sql-explainer.md
skills/_TEMPLATE/: SKILL.md
skills/_TEMPLATE/scripts/: example.py
skills/commit-message-writer/: SKILL.md
skills/ibcs-mail/: SKILL.md
skills/meeting-minutes-from-vtt/: SKILL.md
skills/meeting-minutes-from-vtt/references/: email_style.md  ibcs_principles.md
skills/meeting-minutes-from-vtt/scripts/: parse_vtt.py
skills/sql-explainer/: SKILL.md
src/hico_skills/: __init__.py  __main__.py  aliases.py  auth.py  config.py  frontmatter.py  get.py  guidance.py  models.py  render.py  search.py  server.py  store.py  web.py
tests/: conftest.py  test_auth.py  test_auth_provider.py  test_config.py  test_frontmatter.py  test_get.py  test_guidance.py  test_mcp.py  test_search.py  test_store.py  test_web_api.py
